# apache-atlas-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ROADMAP.md
src/apache_atlas_mcp/: client.py  config.py  models.py  server.py
src/apache_atlas_mcp/tools/: classification.py  entity.py  glossary.py  helpers.py  lineage.py  typedefs.py
tests/: conftest.py  test_client.py  test_config.py  test_server.py
