[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache-atlas-mcp"
version = "0.1.1"
description = "MCP (Model Context Protocol) server for Apache Atlas metadata governance"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DanMeon" }]
keywords = ["mcp", "apache-atlas", "metadata", "governance", "lineage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
apache-atlas-mcp = "apache_atlas_mcp.server:main"

[project.urls]
Homepage = "https://github.com/DanMeon/apache-atlas-mcp"
Repository = "https://github.com/DanMeon/apache-atlas-mcp"
Issues = "https://github.com/DanMeon/apache-atlas-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/apache_atlas_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["apache_atlas_mcp"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0",
    "respx>=0.22.0",
    "ruff>=0.15.4",
]
